syntax = "proto3";

package api;
option go_package = "/api";

service Adder {
  rpc Add(AddRequest) returns (AddResponse){}
  rpc SetName(Person) returns (PersonFullName){}
}

message AddRequest {
  int32 x = 1;
  int32 y = 2;
}

message AddResponse {
  int32 result = 1;
}

message Person {
  string name = 1;
  string subName = 2;
}

message PersonFullName {
  string fullName = 1;
}